linking levels with fish & creating thier seeders